--- a/views/checklist.ejs
+++ b/views/checklist.ejs
@@ -117,13 +117,15 @@
         riesgos y se toman medidas para mitigarlos.</label><br />
       <br />
       <div id="botoncheck">
-        <input type="submit" value="Guardar" id="botonSubir">
+        <input type="button" value="Guardar" id="imprimirBtn" />
         <input type="button" value="Imprimir" id="imprimirBtn" />
-        <input type="button" value="Descargar" />
       </div>
     </section>
   </form>
-
+  <form action="http://localhost:4000/api/" method="POST" enctype="multipart/form-data">
+    <input type="file" name="PDFfile">
+    <input type="submit" value="Enviar a Google Drive">
+  </form>
   <footer></footer>
   <script src="js/checklist.imprimir.js"></script>
   <!---<script src="../js/checklist.google.js"></script>--->
