Se aplicó el icono correspondiente a todas las paginas

--- a/views/wiki.ejs
+++ b/views/wiki.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Centinela</title>
+    <link rel="shortcut icon" href="images/logonuevo.png" type="image/x-icon">
     <!--==== STYLE.CSS ==== -->
     <link rel="stylesheet" href="css/style.css" />
     <!--==== REMIXICON CDN ==== -->
@@ -63,7 +64,7 @@
             </div>
             <p class="description">Información indispensable para la seguridad industrial requerida en todas las empresas.</p>
           </div>
-          <a href="#" class="button">Leer más.</a>
+          <a href="/generales" class="button">Leer más.</a>
         </div>
         <div class="box">
           <div class="box-top">
@@ -74,7 +75,7 @@
             </div>
             <p class="description">Riesgos, medidas, manejos y cuidados generales para trabajar de manera segura en el torno.</p>
           </div>
-          <a href="#" class="button">Leer más.</a>
+          <a href="/metalurgia" class="button">Leer más.</a>
         </div>
         <div class="box">
           <div class="box-top">
@@ -85,7 +86,7 @@
             </div>
             <p class="description">Cuidados, recomendaciones, consejos y paso a paso para la utilización de las herramientas de forma adecuada.</p>
           </div>
-          <a href="#" class="button">Leer más.</a>
+          <a href="/carpinteria" class="button">Leer más.</a>
         </div>
         <div class="box">
           <div class="box-top">
@@ -96,7 +97,7 @@
             </div>
             <p class="description">Riesgos, consejos, instalación y consecuencias de la energía electrica para un buen manipulamiento de la misma.</p>
           </div>
-          <a href="#" class="button">Leer más.</a>
+          <a href="/electricidad" class="button">Leer más.</a>
         </div>
       </div>
     </section>
