--- a/views/electricidad.ejs
+++ b/views/electricidad.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Centinela</title>
-
+    <link rel="shortcut icon" href="images/logonuevo.png" type="image/x-icon">
     <!--==== STYLE.CSS ==== -->
     <link rel="stylesheet" href="css/documentos.css" />
     <!--==== REMIXICON CDN ==== -->
