--- a/views/servicios.ejs
+++ b/views/servicios.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive Landing Page using HTML, CSS & Javascript</title>
+    <link rel="shortcut icon" href="images/logonuevo.png" type="image/x-icon">
     <!--==== STYLE.CSS ==== -->
     <link rel="stylesheet" href="css/style.css" />
     <!--==== REMIXICON CDN ==== -->
