Ahora drive solo acepta pdf

--- a/public/css/checklist.css
+++ b/public/css/checklist.css
@@ -22,6 +22,12 @@ form {
   position: relative;
 }
 
+#enviogoogle{
+  border: none;
+  box-shadow: none;
+  margin-top: 10px;
+}
+
 h1 {
   text-align: center;
 }
