--- a/views/checklist.ejs
+++ b/views/checklist.ejs
@@ -122,8 +122,8 @@
       </div>
     </section>
   </form>
-  <form action="http://localhost:4000/api/" method="POST" enctype="multipart/form-data">
-    <input type="file" name="PDFfile">
+  <form action="http://localhost:4000/api/" method="POST" enctype="multipart/form-data" id="enviogoogle">
+    <input type="file" name="PDFfile" accept="application/pdf">
     <input type="submit" value="Enviar a Google Drive">
   </form>
   <footer></footer>
