fix: correcion de vistas y agregado de nodemailer

--- a/views/herramientas.ejs
+++ b/views/herramientas.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Centinela</title>
     <!--==== STYLE.CSS ==== -->
+    <link rel="stylesheet" href="css/nav.css" />
     <link rel="stylesheet" href="css/style.css" />
     <!--==== REMIXICON CDN ==== -->
     <link
