--- a/views/servicios.ejs
+++ b/views/servicios.ejs
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <!--==== STYLE.CSS ==== -->
+    <link rel="stylesheet" href="css/nav.css" />
     <link rel="stylesheet" href="css/style.css" />
     <!--==== REMIXICON CDN ==== -->
     <link
