--- a/views/acercade.ejs
+++ b/views/acercade.ejs
@@ -13,6 +13,7 @@
       crossorigin="anonymous"
     />
     <!--==== STYLE.CSS ==== -->
+    <link rel="stylesheet" href="css/nav.css" />
     <link rel="stylesheet" href="css/style.css" />
     <!--==== REMIXICON CDN ==== -->
     <link
