--- a/views/contacto.ejs
+++ b/views/contacto.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Centinela</title>
     <!--==== STYLE.CSS ==== -->
-
+    <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/contacto.css" />
     <!--==== REMIXICON CDN ==== -->
@@ -158,6 +158,6 @@
     <!--==== GSAP CDN ==== -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
     <!--==== SCRIPT.JS ==== -->
-    <script src="./js/main.js" defer></script>
+    <script src="js/nav.js" defer></script>
   </body>
 </html>
