--- a/views/cuenta.ejs
+++ b/views/cuenta.ejs
@@ -14,6 +14,7 @@
     />
     <!--==== STYLE.CSS ==== -->
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/nav.css">
     <!--==== REMIXICON CDN ==== -->
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
