--- a/views/cuenta.ejs
+++ b/views/cuenta.ejs
@@ -5,13 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Centinela</title>
-
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
-    />
+    <link rel="shortcut icon" href="images/logonuevo.png" type="image/x-icon">
     <!--==== STYLE.CSS ==== -->
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/nav.css">
@@ -66,31 +60,27 @@
         <h1 class="hero_title">Cuenta</h1>
         <section>
           <!--Tarjetera nueva  -->
-          <div class="row">
-            <!-- Gallery item -->
-            <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-              <div class="bg-white rounded shadow-sm">
-                <img src="images/1.jpeg" alt="" class="img-fluid card-img-top" />
-                <div class="p-4">
-                  <h5>
-                    <a href="/register" class="text-dark">register</a>
-                  </h5>
+          <div class="wrap_cuenta">
+            <div class="box">
+              <div class="box-top">
+                <img class="box-image" src="images/1.jpeg" alt="Imagen Register">
+                <div class="title-flex">
+                  <h3 class="box-title">Registro</h3>
+                  <p class="user-follow-info">Guardar mis datos en la página</p>
                 </div>
               </div>
+              <a href="/register" class="button">Registrarse</a>
             </div>
-            <!-- End -->
-            <!-- Gallery item -->
-            <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-              <div class="bg-white rounded shadow-sm">
-                <img src="images/2.jpeg" alt="" class="img-fluid card-img-top" />
-                <div class="p-4">
-                  <h5>
-                    <a href="/login" class="text-dark">login</a>
-                  </h5>
+            <div class="box">
+              <div class="box-top">
+                <img class="box-image" src="images/2.jpeg" alt="Imagen login">
+                <div class="title-flex">
+                  <h3 class="box-title">Ingreso</h3>
+                  <p class="user-follow-info">Ingresar a traves de mi cuenta</p>
                 </div>
               </div>
+              <a href="/login" class="button">Ingresar</a>
             </div>
-            <!-- End -->
           </div>
         </section>
       </div>
