--- a/views/wiki.ejs
+++ b/views/wiki.ejs
@@ -5,16 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Centinela</title>
-
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
-    />
+    <link rel="shortcut icon" href="images/logonuevo.png" type="image/x-icon" />
     <!--==== STYLE.CSS ==== -->
-    <link rel="stylesheet" href="css/wiki.css" />
-    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/nav.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <!--==== REMIXICON CDN ==== -->
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
@@ -41,7 +35,7 @@
               <a href="/" class="nav_menu_link">Inicio</a>
             </li>
             <li class="nav_menu_item">
-              <a href="/cuenta" class="nav_menu_link">cuenta</a>
+              <a href="/cuenta" class="nav_menu_link">Cuenta</a>
             </li>
             <li class="nav_menu_item">
               <a href="/acercade" class="nav_menu_link">formularios</a>
@@ -61,93 +55,83 @@
     </header>
 
     <section class="hero">
-      <div class="hero_content">
-        <section>
-          <!--Tarjetera nueva  -->
-          <div class="row">
-            <!-- Gallery item -->
-            <div class="my-2 mx-auto p-relative bg-white shadow-1 blue-hover" style="width: 360px; overflow: hidden; border-radius: 1px;">
-              <img src="images/generales.jpg" alt="Man with backpack"    
-                class="d-block w-full">
-    
-                <div class="px-2 py-2">
-                <p class="mb-0 small font-weight-medium text-uppercase mb-1 text-muted lts-2px">Seguridad Industrial</p>
-                  <h1 class="ff-serif font-weight-normal text-black card-heading mt-0 mb-1" style="line-height: 1.25;">
-                  Generales
-                  </h1>
-    
-                <p class="mb-1">
-                  Información indispensable para la seguridad industrial requerida en todas las empresas.
-                </p>
-                </div>
-            <a href="/generales" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-2 mb-2 text-center styled-link">
-            Leer más
-            </a>
+      <div class="wrap">
+        <div class="box">
+          <div class="box-top">
+            <img
+              class="box-image"
+              src="images/generales.jpg"
+              alt="Imagen generales"
+            />
+            <div class="title-flex">
+              <h3 class="box-title">Seguridad Industrial</h3>
+              <p class="user-follow-info">Generales</p>
             </div>
-            <!-- End -->
-            <!-- Gallery item -->
-            <div class="my-2 mx-auto p-relative bg-white shadow-1 blue-hover" style="width: 360px; overflow: hidden; border-radius: 1px;">
-              <img src="images/metalurgia.jpg" alt="Man with backpack"    
-                class="d-block w-full">
-    
-                <div class="px-2 py-2">
-                <p class="mb-0 small font-weight-medium text-uppercase mb-1 text-muted lts-2px">Seguridad en el torno</p>
-                  <h1 class="ff-serif font-weight-normal text-black card-heading mt-0 mb-1" style="line-height: 1.25;">
-                  Metalurgia
-                  </h1>
-    
-                <p class="mb-1">
-                  Riesgos, medidas, manejos y cuidados generales para trabajar de manera segura en el torno.
-                </p>
-                </div>
-            <a href="/metalurgia" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-2 mb-2 text-center styled-link">
-            Leer más
-            </a>
-            </div>
-            
-            <div class="my-2 mx-auto p-relative bg-white shadow-1 blue-hover" style="width: 360px; overflow: hidden; border-radius: 1px;">
-              <img src="images/carpinteria.jpg" alt="Man with backpack"    
-                class="d-block w-full">
-    
-                <div class="px-2 py-2">
-                <p class="mb-0 small font-weight-medium text-uppercase mb-1 text-muted lts-2px">Seguridad con herramientas</p>
-                  <h1 class="ff-serif font-weight-normal text-black card-heading mt-0 mb-1" style="line-height: 1.25;">
-                  Carpintería
-                  </h1>
-    
-                <p class="mb-1">
-                  Cuidados, recomendaciones, consejos y paso a paso para la utilización de las herramientas de forma adecuada.
-                </p>
-                </div>
-            <a href="/carpinteria" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-2 mb-2 text-center styled-link">
-            Leer más
-            </a>
-            </div>
-
-            <div class="my-2 mx-auto p-relative bg-white shadow-1 blue-hover" style="width: 360px; overflow: hidden; border-radius: 1px;">
-              <img src="images/electricidad.jpg" alt="Man with backpack"    
-                class="d-block w-full">
-    
-                <div class="px-2 py-2">
-                <p class="mb-0 small font-weight-medium text-uppercase mb-1 text-muted lts-2px">Seguridad con Tableros Eléctricos</p>
-                  <h1 class="ff-serif font-weight-normal text-black card-heading mt-0 mb-1" style="line-height: 1.25;">
-                  Electricidad
-                  </h1>
-    
-                <p class="mb-1">
-                  Riesgos, consejos, instalación y consecuencias de la energía electrica para un buen manipulamiento de la misma.
-                </p>
-                </div>
-            <a href="/electricidad" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-2 mb-2 text-center styled-link">
-            Leer más
-            </a>
-            </div>
-            <!-- End -->
+            <p class="description">
+              Información indispensable para la seguridad industrial requerida
+              en todas las empresas.
+            </p>
           </div>
+          <a href="/generales" class="button">Leer más.</a>
         </div>
+        <div class="box">
+          <div class="box-top">
+            <img
+              class="box-image"
+              src="images/metalurgia.jpg"
+              alt="Metalurgia"
+            />
+            <div class="title-flex">
+              <h3 class="box-title">Seguridad en el torno</h3>
+              <p class="user-follow-info">Metalurgia</p>
+            </div>
+            <p class="description">
+              Riesgos, medidas, manejos y cuidados generales para trabajar de
+              manera segura en el torno.
+            </p>
+          </div>
+          <a href="/metalurgia" class="button">Leer más.</a>
+        </div>
+        <div class="box">
+          <div class="box-top">
+            <img
+              class="box-image"
+              src="images/carpinteria.jpg"
+              alt="Girl Eating Pizza"
+            />
+            <div class="title-flex">
+              <h3 class="box-title">Seguridad con herramientas</h3>
+              <p class="user-follow-info">Carpintería</p>
+            </div>
+            <p class="description">
+              Cuidados, recomendaciones, consejos y paso a paso para la
+              utilización de las herramientas de forma adecuada.
+            </p>
+          </div>
+          <a href="/carpinteria" class="button">Leer más.</a>
+        </div>
+        <div class="box">
+          <div class="box-top">
+            <img
+              class="box-image"
+              src="images/electricidad.jpg"
+              alt="Girl Eating Pizza"
+            />
+            <div class="title-flex">
+              <h3 class="box-title">Seguridad con Tableros Eléctricos</h3>
+              <p class="user-follow-info">Electricidad</p>
+            </div>
+            <p class="description">
+              Riesgos, consejos, instalación y consecuencias de la energía
+              electrica para un buen manipulamiento de la misma.
+            </p>
+          </div>
+          <a href="/electricidad" class="button">Leer más.</a>
+        </div>
+      </div>
     </section>
 
     <footer></footer>
-    <script src="js/nav.js" defer></script>
   </body>
+  <script src="js/nav.js" defer></script>
 </html>
