--- a/views/electricidad.ejs
+++ b/views/electricidad.ejs
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Centinela</title>
-    <link rel="shortcut icon" href="images/logonuevo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/logonuevo.png" type="image/x-icon" />
     <!--==== STYLE.CSS ==== -->
     <!-- <link rel="stylesheet" href="css/documentos.css" /> -->
     <link rel="stylesheet" href="css/nav.css" />
+    <link rel="stylesheet" href="css/informacion.css" />
     <!--==== REMIXICON CDN ==== -->
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
@@ -108,7 +109,7 @@
       corriente.
     </p>
     <br /><br />
-    <h2>La Puesta a Tierra de la Instalación Eléctrica</h2>
+    <h2 class="sub-titulo">La Puesta a Tierra de la Instalación Eléctrica</h2>
     <p>
       Junto con las protecciones instaladas al Tablero General de Electricidad,
       cada tablero posee una barra de tierra interna, la que se conecta a la
@@ -126,7 +127,7 @@
       protección que brindan seguridad al usuario.
     </p>
     <br /><br />
-    <h2>Sistemas de Protección</h2>
+    <h2 class="sub-titulo">Sistemas de Protección</h2>
     <p>
       Los interruptores de protección permiten que, en caso de que se presente
       un riesgo eléctrico para la instalación, se suprima automáticamente el
@@ -153,7 +154,9 @@
       persona, generándole un riesgo de muerte por electrocución.
     </p>
     <br /><br />
-    <h2>Uso de Tarjetas de Bloqueo en los Tableros Eléctricos</h2>
+    <h2 class="sub-titulo">
+      Uso de Tarjetas de Bloqueo en los Tableros Eléctricos
+    </h2>
     <p>
       El procedimiento de Bloqueo y Tarjetas de Seguridad deberá ser usado para
       dejar inoperativa una fuente de energía, tal como un sistema eléctrico,
@@ -174,7 +177,7 @@
       estos queden operando en la misma condición inicial.
     </p>
     <br /><br />
-    <h2>Instalación de Tarjetas</h2>
+    <h2 class="sub-titulo">Instalación de Tarjetas</h2>
     <p>
       Antes de comenzar el trabajo, el operador debe instalar las tarjetas
       correspondientes en cada equipo donde se realizará el trabajo,
@@ -190,7 +193,7 @@
     </p>
     <img src="images/clas3.jpg" alt="" />
     <br /><br />
-    <h2>La energía eléctrica y el cuerpo humano</h2>
+    <h2 class="sub-titulo">La energía eléctrica y el cuerpo humano</h2>
     <p>
       La gravedad de los efectos dañinos de un choque eléctrico en el cuerpo
       humano está determinada por los siguientes aspectos:
