cambios nav bar, agregado de link style.css en los ejs

--- a/views/carpinteria.ejs
+++ b/views/carpinteria.ejs
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Centinela</title>
-    <link rel="shortcut icon" href="images/logonuevo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/logonuevo.png" type="image/x-icon" />
     <!--==== STYLE.CSS ==== -->
     <!-- <link rel="stylesheet" href="css/documentos.css" /> -->
     <link rel="stylesheet" href="css/nav.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <!--==== REMIXICON CDN ==== -->
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
