--- a/views/checklist.ejs
+++ b/views/checklist.ejs
@@ -16,6 +16,7 @@
   <title>Centinela</title>
   <!--==== STYLE.CSS ==== -->
   <link rel="stylesheet" href="css/nav.css" />
+  <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/checklist.css" />
   <!--==== REMIXICON CDN ==== -->
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
