--- a/views/electricidad.ejs
+++ b/views/electricidad.ejs
@@ -9,6 +9,7 @@
     <!--==== STYLE.CSS ==== -->
     <!-- <link rel="stylesheet" href="css/documentos.css" /> -->
     <link rel="stylesheet" href="css/nav.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/informacion.css" />
     <!--==== REMIXICON CDN ==== -->
     <link
