Se modificó la página de services

--- a/views/servicios.ejs
+++ b/views/servicios.ejs
@@ -54,19 +54,25 @@
       </nav>
     </header>
 
-    <section>
+    <section class="section_services">
       <!--Tarjetera nueva  -->
-      <div class="wrap_cuenta">
-        <div class="box">
-          <div class="box-top">
-            <img class="box-image" src="images/4.jpg" alt="Imagen Wiki">
-            <div class="title-flex">
-              <h3 class="box-title">Wiki</h3>
-              <p class="user-follow-info">Información acerca de las seguridades</p>
+      <div class="grid-container">
+          <div class="grid-columns">
+            <div class="img-styleBox">
+                <div class="styleBox-border">
+                <img class="styleBox-img1" src="images/libreria.png" alt="imagenwiki">
+                </div>
+                <img class="styleBox-img2" src="images/trabalhadores.png" alt="imagenwiki">
             </div>
           </div>
-          <a href="/wiki" class="button">Informes</a>
-        </div>
+          <div class="grid-columns">
+              <div class="section-intro">
+                <h4 class="intro-title" ::after>Acerca de</h4> 
+                <h3 class="wiki-title">Wiki</h3>
+              </div>
+              <p class="paragraph-services">Para profundizar en el tema crucial de la seguridad e higiene, hemos creado una wiki exhaustiva que abarca diversas áreas en el entorno empresarial. En esta 	wiki, encontrarás información detallada sobre las mejores prácticas, regulaciones, consejos y recursos esenciales para mantener un ambiente de trabajo seguro y saludable. </p>
+              <a class="buttonwiki" href="/wiki">Leer más</a>
+          </div>
       </div>
     </section>
 
