--- a/views/contacto.ejs
+++ b/views/contacto.ejs
@@ -140,7 +140,7 @@
             ></textarea>
           </p>
 
-          <button type="submit" name="enviar_formulario" id="enviar">
+          <button class="button" type="submit" name="enviar_formulario" id="enviar">
             <p>Enviar</p>
           </button>
         </form>
