--- a/views/acercade.ejs
+++ b/views/acercade.ejs
@@ -9,6 +9,7 @@
     <!--==== STYLE.CSS ==== -->
     <link rel="stylesheet" href="css/nav.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/acercade.css">
     <!--==== REMIXICON CDN ==== -->
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
@@ -56,18 +57,34 @@
 
     <section>
       <!--Tarjetera nueva  -->
-      <div class="wrap_cuenta">
-        <div class="box">
-          <div class="box-top">
-            <img class="box-image" src="images/3.jpeg" alt="Imagen Formulario">
-            <div class="title-flex">
-              <h3 class="box-title">Checklist</h3>
-              <p class="user-follow-info">Formulario con medidas de seguridad</p>
+      <div class="grid-container">
+        <div class="hero-left">
+            <h1 class="hero-title-about">Formulario con <br> medidas de seguridad e higiene</h1>
+            <div class="buttons-about">
+                <a class="button-about" href="/checklist">Seguridad</a>
+                <a class="button-about2" href="/higiene">Higiene</a>
+                <ul class="hero-info">
+                  <li>
+                  <img src="images/safety.png" alt="">
+                  <h4>100% Seguro</h4>
+                  </li>
+                  <li>
+                  <img src="images/guarantee.png" alt="">
+                  <h4>Confiable</h4>
+                  </li>
+                  <li>
+                  <img src="images/drive.png" alt="">
+                  <h4>Buen <br> salvaguardado</h4>
+                  </li>
+                  </ul>
             </div>
-          </div>
-          <a href="/checklist" class="button">Rellenar</a>
         </div>
-      </div>
+        <div class="hero-right">
+            <div class="owl-nav disabled">
+              <img src="images/formulario1.png" alt="" class="img-about">
+            </div>
+        </div>
+    </div>
     </section>
     <!-- - ==== HERO ==== → -->
 
